--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.aregger</groupId>
-    <artifactId>oracle-tracefile-fetcher</artifactId>
+    <artifactId>odff</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -86,7 +86,7 @@
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>io.aregger.otf.application.OracleTracefileFetcherCli</mainClass>
+                                    <mainClass>io.aregger.odff.application.OracleDiagFileFetcher</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
