--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <mockito.version>4.2.0</mockito.version>
         <assertj.version>3.22.0</assertj.version>
         <maven-surefire.version>3.0.0-M5</maven-surefire.version>
+        <jackson.version>2.13.1</jackson.version>
     </properties>
 
     <dependencies>
@@ -43,6 +44,10 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
 
         <!-- Test -->
@@ -89,6 +94,11 @@
                 <groupId>org.apache.logging.log4j</groupId>
                 <artifactId>log4j-core</artifactId>
                 <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
             </dependency>
 
             <!-- Test -->
