[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 
     <groupId>io.aregger</groupId>
     <artifactId>odff</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
 
     <scm>
         <developerConnection>scm:git:https://github.com/TAregger/odff.git</developerConnection>
-      <tag>0.1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
